fix: Url in composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
       "name": "Niels Langlotz",
       "role": "Developer",
       "email": "info@typoniels.de",
-      "homepage": "www.typoniels.de"
+      "homepage": "https://www.typoniels.de"
     }
   ],
   "version": "1.0.0",
