--- a/composer.json
+++ b/composer.json
@@ -28,15 +28,9 @@
     "typo3/cms-core": "^9.5 || ^10.4 || ^11",
     "typo3/cms-extbase": "^9.5 || ^10.4 || ^11",
     "typo3/cms-fluid": "^9.5 || ^10.4 || ^11",
-    "typo3/cms-frontend": "^9.5 || ^10.4 || ^11"
-  },
-  "require-dev": {
-    "phpmd/phpmd": "^2.7",
-    "phpstan/phpstan": "0.12.50",
-    "squizlabs/php_codesniffer": "^3.5",
-    "friendsoftypo3/phpstan-typo3": "^0.5.0",
-    "nimut/testing-framework": "dev-master",
-    "sensiolabs/security-checker": "^6.0"
+    "typo3/cms-frontend": "^9.5 || ^10.4 || ^11",
+    "phpstan/phpstan": "^0.12.88",
+    "squizlabs/php_codesniffer": "^3.6"
   },
   "autoload": {
     "psr-4": {
