--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,46 @@
 {
-  "name": "typoniels/techradar",
-  "type": "typo3-cms-extension",
-  "description": "TYPO3 Extension to Import Techradar Data (Cockpit CMS) into TYPO3",
-  "authors": [
-    {
-      "name": "Niels Langlotz",
-      "role": "Developer",
-      "email": "info@typoniels.de",
-      "homepage": "https://www.typoniels.de"
+    "name": "typoniels/techradar",
+    "type": "typo3-cms-extension",
+    "description": "TYPO3 Extension to Import Techradar Data (Cockpit CMS) into TYPO3",
+    "authors": [
+        {
+            "name": "Niels Langlotz",
+            "role": "Developer",
+            "email": "info@typoniels.de",
+            "homepage": "https://www.typoniels.de"
+        }
+    ],
+    "version": "1.0.0",
+    "license": "GPL-2.0-or-later",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://composer.typo3.org/"
+        }
+    ],
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "techradar"
+        }
+    },
+    "require": {
+        "php": "~7.2 || ~7.3 || ~7.4 || 8.0",
+        "typo3/cms-core": "^9.5 || ^10.4 || ^11",
+        "typo3/cms-extbase": "^9.5 || ^10.4 || ^11",
+        "typo3/cms-fluid": "^9.5 || ^10.4 || ^11",
+        "typo3/cms-frontend": "^9.5 || ^10.4 || ^11"
+    },
+    "autoload": {
+        "psr-4": {
+            "TN\\Techradar\\": "Classes/"
+        }
+    },
+    "replace": {
+        "typo3-ter/techradar": "self.version"
+    },
+    "require-dev": {
+        "phpmd/phpmd": "^2.10",
+        "phpstan/phpstan": "^0.12.88",
+        "squizlabs/php_codesniffer": "^3.6"
     }
-  ],
-  "version": "1.0.0",
-  "license": "GPL-2.0-or-later",
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://composer.typo3.org/"
-    }
-  ],
-  "extra": {
-    "typo3/cms": {
-      "extension-key": "techradar"
-    }
-  },
-  "require": {
-    "php": "~7.2 || ~7.3 || ~7.4 || 8.0",
-    "typo3/cms-core": "^9.5 || ^10.4 || ^11",
-    "typo3/cms-extbase": "^9.5 || ^10.4 || ^11",
-    "typo3/cms-fluid": "^9.5 || ^10.4 || ^11",
-    "typo3/cms-frontend": "^9.5 || ^10.4 || ^11",
-    "phpstan/phpstan": "^0.12.88",
-    "squizlabs/php_codesniffer": "^3.6"
-  },
-  "autoload": {
-    "psr-4": {
-      "TN\\Techradar\\": "Classes/"
-    }
-  },
-  "replace": {
-    "typo3-ter/techradar": "self.version"
-  }
 }
