fix: Composer Backward Compatibility

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     },
     "require": {
-        "php": "~7.2 || ~7.3 || ~7.4 || 8.0",
+        "php": "7.2.* || 7.3.* || 7.4.* || 8.0.*",
         "typo3/cms-core": "^9.5 || ^10.4 || ^11",
         "typo3/cms-extbase": "^9.5 || ^10.4 || ^11",
         "typo3/cms-fluid": "^9.5 || ^10.4 || ^11",
@@ -31,7 +31,7 @@
     },
     "autoload": {
         "psr-4": {
-            "TN\\Techradar\\": "Classes/"
+            "TN\\Techradar\\": "./Classes/"
         }
     },
     "replace": {
