--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,17 @@
             "url": "https://composer.typo3.org/"
         }
     ],
+    "config": {
+        "vendor-dir": ".Build/vendor",
+        "bin-dir": ".Build/bin",
+        "platform": {
+            "php": "7.4"
+        }
+    },
     "extra": {
         "typo3/cms": {
+            "cms-package-dir": "{$vendor-dir}/typo3/cms",
+            "web-dir": ".Build/public",
             "extension-key": "techradar"
         }
     },
