--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "typo3/cms-core": "^9.5 || ^10.4",
         "typo3/cms-extbase": "^9.5 || ^10.4",
         "typo3/cms-fluid": "^9.5 || ^10.4",
-        "typo3/cms-frontend": "^9.5 || ^10.4"
+        "typo3/cms-frontend": "^9.5 || ^10.4",
+        "erusev/parsedown": "^1.7"
     },
     "autoload": {
         "psr-4": {
