--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ php-codesniffer:
   dependencies:
     - build_composer
   script:
-    - ./vendor/bin/phpcs -n --extensions=php --standard=PSR12 ./Classes/
+    - .Build/bin/phpcs -n --extensions=php --standard=PSR12 ./Classes/
 
 phpmd:
   image: "php:7.4"
@@ -32,7 +32,7 @@ phpmd:
   dependencies:
     - build_composer
   script:
-    - php ./vendor/bin/phpmd ./Classes/ ansi ./phpmd.xml
+    - php .Build/bin/phpmd ./Classes/ ansi ./phpmd.xml
 
 phpstan:
   image: "php:7.4"
@@ -42,4 +42,4 @@ phpstan:
   dependencies:
     - build_composer
   script:
-    - php -d memory_limit=512M ./vendor/bin/phpstan analyze ./Classes/ --level 5
+    - php -d memory_limit=512M .Build/bin/phpstan analyze ./Classes/ --level 5
