--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,10 @@
     },
     "require": {
         "php": "7.2.* || 7.3.* || 7.4.*",
-        "typo3/cms-core": "^9.5 || ^10.4",
-        "typo3/cms-extbase": "^9.5 || ^10.4",
-        "typo3/cms-fluid": "^9.5 || ^10.4",
-        "typo3/cms-frontend": "^9.5 || ^10.4",
+        "typo3/cms-core": "^9.5 || ^10.4 || ^11",
+        "typo3/cms-extbase": "^9.5 || ^10.4 || ^11",
+        "typo3/cms-fluid": "^9.5 || ^10.4 || ^11",
+        "typo3/cms-frontend": "^9.5 || ^10.4 || ^11",
         "erusev/parsedown": "^1.7"
     },
     "autoload": {
